--- a/src/main/java/edu/uky/cs405g/sample/README
+++ b/src/main/java/edu/uky/cs405g/sample/README
@@ -1,5 +1,14 @@
+Date: 
+	05/01/2020	
+
+Contributors: 
+	Haleigh Snapp
+	Jordan Menchen
+	Will Watkins
+	Zac Foster
+
 Compilation:
-	
+	We used the starter code.
 
 Overview:
 	The following program is our HTTP RESTful API. The creation of a 
